<resources>
    <string name="app_name">Android Wired ECR</string>
    <string name="status_check">Status Check</string>
    <string name="sale">SALE</string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="merchant_id">Merchant ID</string>
    <string name="amount_in_paise">Amount (In Paise)</string>
    <string name="order_id">Order ID</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="extended_info">Extended Info</string>
    <string name="response">Response</string>
    <string name="send_request">Send Request</string>
    <string name="cancel_request">Cancel Transaction</string>
    <string name="sub_wallet_info">Sub Wallet Info</string>
    <string name="gst_info">GST Info</string>
    <string name="print_info">Print Info</string>
    <string name="init">Init</string>
    <string name="void_label">Void</string>
    <string name="print">Print</string>
    <string name="connection_check">Connection Check</string>
    <string name="card_qr_all">CARD/ QR /ALL</string>
    <string name="open_connection">Open Connection</string>
    <string name="close_connection">Close Connection</string>
    <string name="eg_extendinfo_values"><![CDATA[eg :- extendInfo://values?productValidationValue=12764874894894898& * merchantTxnId=82938938983&caNumber=34567777]]></string>
    <string name="eg_subwallet_info">eg :- FOOD:2000|GIFT:1000</string>
    <string name="eg_gstinfo"><![CDATA[eg :- gstInformation://values?gstIn=08TESTF0078P1ZP&gstBrkUp=CGST:10|SGST:10|IGST:10|CESS:10|GSTIncentive:10|GSTPCT:10&invoiceNo=Invoice34234321&invoiceDate=20210512142919]]></string>
    <string name="eg_printinfo"><![CDATA[eg :- printInfo://values?merchantTxnId=82938938983&caNumber=34567777&billNumber=xyz123]]></string>
    <string name="tip_amount_in_paise">Tip Amount (In Paise)</string>
    <string name="total_amount_in_paise">Total Amount (In Paise)</string>
    <string name="capture">Capture</string>
    <string name="preauth">PreAuth</string>
    <string name="release">Release</string>
    <string name="preauth_amount_in_paise">PreAuth Amount (In Paise)</string>
    <string name="pre_auth_txn_type">Pre Auth Txn Type</string>
    <string name="connected">Connected : %s</string>
</resources>